--- a/app/src/main/res/layout/fragment_clientes.xml
+++ b/app/src/main/res/layout/fragment_clientes.xml
@@ -1,36 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical"
+tools:context=".ClientesFragment">
 
-    android:id="@+id/fragment_clientes_id_LinearLayout"
+
+<android.support.v7.widget.RecyclerView
+
+    android:layout_width = "match_parent"
+    android:layout_height= "match_parent"
+    android:id="@+id/clientes_recyclerview">
+
+
+
+</android.support.v7.widget.RecyclerView>
+
+<!-- TODO: Update blank fragment layout -->
+<TextView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#FFF"
-    tools:context=".ClientesFragment">
-
-
-    <!-- TODO: Update blank fragment layout -->
-
-
-    <android.support.v7.widget.RecyclerView
-
-
-        android:id="@+id/clientes_recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="445dp"
-        android:layout_marginTop="5dp"
-        android:background="#FFF"
-        android:padding="30dp">
-
-
-
-    </android.support.v7.widget.RecyclerView>
-
-
-
-
-
+    android:text="Aquí irá una lista de clientes"
+    android:textAlignment="center"
+    android:textSize="24sp"
+    android:textStyle="bold" />
 
 </LinearLayout>
