--- a/app/src/main/res/layout/fragment_registro__ventas_.xml
+++ b/app/src/main/res/layout/fragment_registro__ventas_.xml
@@ -12,11 +12,10 @@
     tools:context=".Registro_Ventas_Fragment">
 
 
-
     <Button
         android:id="@+id/titulo_cargas_descargas_ventas"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:background="#304ffe"
         android:text="Cargas y Descargas"
         android:textAlignment="center"
@@ -35,7 +34,7 @@
         <TextView
             android:id="@+id/total_cargas_ventas"
             android:layout_width="230dp"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             android:text="Total_Cargas:"
             android:textAlignment="center"
             android:textColor="#000"
@@ -76,7 +75,7 @@
             <TextView
                 android:id="@+id/total_descargas_ventas"
                 android:layout_width="230dp"
-                android:layout_height="35dp"
+                android:layout_height="wrap_content"
                 android:text="Total_Descargas:"
                 android:textAlignment="center"
                 android:textColor="#000"
@@ -104,7 +103,7 @@
             <TextView
                 android:id="@+id/total_recuento_envases_ventas"
                 android:layout_width="230dp"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:text="Recuento_Envases:"
                 android:textAlignment="center"
                 android:textColor="#000"
@@ -135,7 +134,7 @@
             <TextView
                 android:id="@+id/total_envases_rotos_ventas"
                 android:layout_width="230dp"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:text="Total_Envases_Rotos:"
                 android:textAlignment="center"
                 android:textColor="#000"
@@ -160,7 +159,7 @@
         <Button
             android:id="@+id/titulo_dinero_ventas"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:background="#304ffe"
             android:text="Dinero"
             android:textAlignment="center"
@@ -179,7 +178,7 @@
             <TextView
                 android:id="@+id/monto_inicial_ventas"
                 android:layout_width="230dp"
-                android:layout_height="35dp"
+                android:layout_height="wrap_content"
                 android:background="#FFF"
                 android:text="Recibiste"
                 android:textAlignment="center"
@@ -209,7 +208,7 @@
             <TextView
                 android:id="@+id/total_dinero_ventas"
                 android:layout_width="230dp"
-                android:layout_height="35dp"
+                android:layout_height="wrap_content"
                 android:background="#FFF"
                 android:text="Entregaste:"
                 android:textAlignment="center"
@@ -235,7 +234,7 @@
         <Button
             android:id="@+id/titulo_articulos_ventas"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:background="#304ffe"
             android:text="Artículos"
             android:textAlignment="center"
@@ -254,7 +253,7 @@
             <TextView
                 android:id="@+id/total_dispenser_plasticos_ventas"
                 android:layout_width="230dp"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:background="#FFF"
                 android:text="Total_Disp.Plasticos:"
                 android:textAlignment="center"
@@ -288,7 +287,7 @@
             <TextView
                 android:id="@+id/total_dispenser_electrico_ventas"
                 android:layout_width="230dp"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:background="#FFF"
                 android:text="Total_Disp.Electricos:"
                 android:textAlignment="center"
@@ -321,7 +320,7 @@
             <TextView
                 android:id="@+id/total_canillas_ventas"
                 android:layout_width="230dp"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:background="#FFF"
                 android:text="Total_Canillas:"
                 android:textAlignment="center"
@@ -354,7 +353,7 @@
             <TextView
                 android:id="@+id/total_envases_vendidos_ventas"
                 android:layout_width="230dp"
-                android:layout_height="35dp"
+                android:layout_height="wrap_content"
                 android:background="#FFF"
                 android:text="Total_Envases_Vendidos:"
                 android:textAlignment="center"
