--- a/app/src/main/res/layout/activity_agregar_cliente.xml
+++ b/app/src/main/res/layout/activity_agregar_cliente.xml
@@ -5,7 +5,7 @@
     android:id="@+id/agregar_clientes_id"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="0dp"
     android:orientation="horizontal"
     android:padding="20dp"
     tools:context=".AgregarCliente">
@@ -26,10 +26,18 @@
 
 
         <EditText
-            android:id="@+id/nombre_cliente_agregar"
+        android:id="@+id/nombre_cliente_agregar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Nombre del Cliente"
+        android:inputType="text"
+        android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/apellido_cliente_agregar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Nombre del Cliente"
+            android:hint="Apellido del Cliente"
             android:inputType="text"
             android:textStyle="bold" />
 
