--- a/app/src/main/res/layout/activity_editar_clientes.xml
+++ b/app/src/main/res/layout/activity_editar_clientes.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="20dp"
-    android:layout_marginTop="90dp"
+    android:layout_marginTop="50dp"
     tools:context=".EditarClientes">
 
 
@@ -31,6 +31,15 @@
             android:layout_height="wrap_content"
             android:inputType="text"
             android:text="Nombre del Cliente"
+            android:textStyle="bold"/>
+
+
+        <EditText
+            android:id="@+id/apellido_cliente_editar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:text="Apellido del Cliente"
             android:textStyle="bold"/>
 
         <EditText
