--- a/app/src/main/res/layout/item_clientes.xml
+++ b/app/src/main/res/layout/item_clientes.xml
@@ -10,50 +10,42 @@
         android:layout_height="56dp"
         android:src="@mipmap/ic_launcher_round"
         android:id="@+id/img_cliente"/>
-    
-    
-    
+
+
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginLeft="16dp">
+        android:layout_marginLeft="16dp"
+        android:orientation="vertical">
 
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/nombre_cliente"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Nombre del Cliente"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/apellido_cliente"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Apellido del Cliente"
+            android:textStyle="bold" />
 
 
-            <TextView
-                android:id="@+id/apellido_cliente"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Apellido del Cliente"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/nombre_cliente"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nombre del Cliente"
+            android:textStyle="bold" />
 
-        </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Direccion"
-        android:id="@+id/direccion_cliente"/>
+        <TextView
+            android:id="@+id/direccion_cliente"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Direccion" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Barrio"
-        android:id="@+id/barrio_cliente"/>
-
+        <TextView
+            android:id="@+id/barrio_cliente"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Barrio" />
 
 
     </LinearLayout>
