--- a/app/src/main/res/layout/activity_ventas_.xml
+++ b/app/src/main/res/layout/activity_ventas_.xml
@@ -163,7 +163,9 @@
             android:layout_height="50dp"
             android:layout_margin="@dimen/appbar_padding_top"
             android:layout_marginTop="10dp"
+            android:cursorVisible="true"
             android:drawablePadding="0dp"
+            android:enabled="true"
             android:inputType="number"
             android:padding="0dp"
             android:textStyle="bold" />
@@ -191,7 +193,9 @@
             android:layout_height="40dp"
             android:layout_margin="@dimen/appbar_padding_top"
             android:layout_marginTop="10dp"
+            android:cursorVisible="false"
             android:drawablePadding="0dp"
+            android:enabled="false"
             android:inputType="number"
             android:padding="0dp"
             android:textStyle="bold" />
@@ -351,7 +355,7 @@
             android:layout_width="150dp"
             android:layout_height="40dp"
             android:layout_marginStart="50dp"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             android:textStyle="bold" />
 
 
